Fix layout on Safari

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -63,6 +63,9 @@ $navbar-item-img-max-height: $navbar-height * 0.5
     margin: 0 auto
     figcaption
 
+// Safari-specific attribute
+.hero
+  display: -webkit-box
 
 .is-hero-logo
   +logo(60%, 30%)
